gac_sb/objects/FacturationEntite__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SF CONSULTING - Utilisé dans le footer des factures</description>
    <fields>
        <fullName>BankName__c</fullName>
        <label>Bank name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_ordre__c</fullName>
        <label>Les chèques sont à libeller à l&apos;ordre de</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_escompte__c</fullName>
        <label>Condition d&apos;escompte</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Coordonnees__c</fullName>
        <label>Coordonnées</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pays__c</fullName>
        <label>Pays</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Penalites_de_retard__c</fullName>
        <label>Pénalités de retard</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RegistrationNumber__c</fullName>
        <label>Numéro d&apos;immatriculation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_web__c</fullName>
        <label>Site web</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>T_P_S__c</fullName>
        <label>T.P.S.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_V_Q__c</fullName>
        <label>T.V.Q.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_l_phone_fax__c</fullName>
        <description>téléphone + fax</description>
        <label>Téléphone &amp; fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virement_BIC__c</fullName>
        <label>BIC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virement_IBAN__c</fullName>
        <label>IBAN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virement_cle_rib__c</fullName>
        <label>Clé RIB</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virement_code_banque__c</fullName>
        <label>Code banque</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virement_code_guichet__c</fullName>
        <label>Code guichet</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virement_domiciliation__c</fullName>
        <label>Domiciliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virement_num_compte__c</fullName>
        <label>N° de compte</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>FacturationEntité</label>
</CustomObject>